[gd_scene load_steps=4 format=2]

[ext_resource path="res://level_stuff/LevelBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="LevelBackground" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
theme = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainVbox" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
margin_left = 99.0
margin_top = 227.0
margin_right = 499.0
margin_bottom = 373.0

[node name="MainTextLabel" type="Label" parent="CanvasLayer/Control/CenterContainer/MainVbox"]
margin_right = 400.0
margin_bottom = 35.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 1
text = "Or,
Radars of the Lost Ark"
align = 1
autowrap = true

[node name="SpacerLabel" type="Label" parent="CanvasLayer/Control/CenterContainer/MainVbox"]
margin_top = 39.0
margin_right = 400.0
margin_bottom = 74.0
text = "
"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/CenterContainer/MainVbox"]
margin_top = 78.0
margin_right = 400.0
margin_bottom = 146.0

[node name="ButtonsVbox" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/MainVbox/CenterContainer"]
margin_left = 96.0
margin_right = 304.0
margin_bottom = 68.0
size_flags_horizontal = 0

[node name="Button1" type="Button" parent="CanvasLayer/Control/CenterContainer/MainVbox/CenterContainer/ButtonsVbox"]
margin_right = 208.0
margin_bottom = 32.0
focus_neighbour_bottom = NodePath("../Button2")
text = "Start Game"

[node name="Button2" type="Button" parent="CanvasLayer/Control/CenterContainer/MainVbox/CenterContainer/ButtonsVbox"]
margin_top = 36.0
margin_right = 208.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../Button1")
text = "Instructions"

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/MainVbox/CenterContainer/ButtonsVbox/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/MainVbox/CenterContainer/ButtonsVbox/Button2" to="." method="_on_Button2_pressed"]
